# libaopp

./: CMakeLists.txt  LICENSE  README.md
include/libaopp/: event.hpp  event_queue.hpp  hsm.hpp
include/libaopp/util/: dispatcher.hpp  function_traits.hpp
src/: event.cpp  event_queue.cpp
test/: CMakeLists.txt  test_dispatcher.cpp  test_event.cpp  test_event_queue.cpp
